fix(text editor): increase contrast on statusbar
Increast contrast on text editor status bar (footer text)

--- a/src/app/components/components/text-editor/text-editor.component.scss
+++ b/src/app/components/components/text-editor/text-editor.component.scss
@@ -1,6 +1,3 @@
 .editor {
   height: 200px;
 }
-.editor-statusbar {
-  color: #000;
-}
