--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,8 @@
   border: 0;
   min-height: 700px;
 }
+
+// text editor component a11y compliance
+.editor-statusbar {
+  color: #000 !important;
+}
